applying Rosa's comments

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -24,6 +24,15 @@
 \usepackage{multirow}
 \usepackage{url}
 
+
+\lstset{basicstyle=\small\ttfamily,
+	emphstyle=\bfseries,
+	columns=fixed,
+	numbers=left,xleftmargin=2em,frame=single,framexleftmargin=1.5em,
+	moredelim=*[l][\textit]{//},
+	moredelim=*[l][\bfseries]{\#},
+	literate={...}{\dots}3
+} 
 %\usepackage[sort]{cite}
 %\usepackage{biblatex}
 \usepackage{soul}
