--- a/TaskGenX/01-introduction.tex
+++ b/TaskGenX/01-introduction.tex
@@ -49,10 +49,8 @@ Our evaluation demonstrates how {\proposal} achieves average speedups of $3.1\ti
 
 \end{itemize} 
 
-The rest of this document is organized as follows: 
-Section~\ref{sec:background} describes the task-based execution model and its main bottlenecks.
-Section~\ref{sec:ram} describes the new task-based runtime system this paper proposes as well as the specialized hardware that accelerates the most time-consuming runtime routines.
-Section~\ref{sec:experimental} contains the experimental set-up of this paper.
-Section~\ref{sec:evaluation} describes the evaluation of {\proposal} via trace-driven simulation.
-Finally, Section~\ref{sec:related} discusses related work and Section~\ref{sec:conclusions} concludes this work.
+The rest of this chapter is organized as follows: 
+Section~\ref{sec.taskgenx.background} describes the task-based execution model and its main bottlenecks.
+Section~\ref{sec.taskgenx.ram} describes the new task-based runtime system this paper proposes as well as the specialized hardware that accelerates the most time-consuming runtime routines.
+Section~\ref{sec.taskgenx.evaluation} describes the evaluation of {\proposal} via trace-driven simulation and Section~\ref{sec.taskgenx.conclusions} concludes this work.
 
