--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,6 @@
 \chapter{Conclusions}
 
+\kc{TODO}
 The goal for this PhD thesis is to incorporate techniques of task and thread scheduling in order to fully utilize asymmetric systems.
 The main contributions of the thesis rely on the efficient exploitation of future asymmetric multi-core systems in terms of performance and energy efficiency as well as on the development of future asymmetric systems that fit the needs of high performance computing.
 Existing parallel scientific applications will become portable when moving from a traditional multi-core to an asymmetric multi-core system. 
