--- a/internship.tex
+++ b/internship.tex
@@ -66,7 +66,7 @@ Our solution performs CPU scheduling to increase FPS in games while keeping temp
 \section{Real-Time Scheduling Solution}
 
 %During the design process we experimented with different levels of the software stack for finding the most appropriate level for such an implementation. 
-As mentioned above, as well as in Chapter~\ref{chapter.study}, scheduling in the kernel level is not flexible and usually results to bad scheduling decisions.
+\footnote{This section intentionally lacks detailed description due to NDA agreement with Samsung}As mentioned above, as well as in Chapter~\ref{chapter.study}, scheduling in the kernel level is not flexible and usually results to bad scheduling decisions.
 %requires a lot of time and is not flexible. 
 An important drawback of the kernel level scheduling is that information provided at this level is limited. 
 For example there is no way to know what each task is used for and what the current runtime circumstances are. 
