--- a/scheduling/cpath.tex
+++ b/scheduling/cpath.tex
@@ -1,9 +1,9 @@
-\section{Critical Path Scheduler}
+\section{Critical Path Scheduler (CPATH)}
 \label{sec.scheduling.cpath}
 \begin{figure}[tr]
 \includegraphics[width=\columnwidth]{images/cpath_priorities.pdf} 
 \centering
-\caption{Priority assignment taking into account the task costs. Task costs are assumed known and are shown in the tables.}
+\caption{Priority assignment with CPATH taking into account the task costs. Task costs are assumed known and are shown in the tables.}
 \label{cpath}
 \vspace{-0.5cm}
 \end{figure}
