--- a/scheduling/hybrid.tex
+++ b/scheduling/hybrid.tex
@@ -1,4 +1,4 @@
-\section{Hybrid Criticality Scheduler}
+\section{Hybrid Criticality Scheduler (HYBRID)}
 \label{sec.scheduling.hybrid}
 
 The Hybrid Criticality Scheduler (HYBRID) is a combination of the CATS and CPATH scheduling policies.
