--- a/TaskGenX/hw.tex
+++ b/TaskGenX/hw.tex
@@ -15,14 +15,21 @@ Previous studies have proposed custom accelerators for the runtime activity~\cit
 These proposals significantly accelerate (up to three orders of magnitude) different bottlenecks of the runtime system\footnote{Section~\ref{sec:related} further describes these proposals.}. 
 These special purpose designs can only execute runtime system activity.
 
+%\begin{figure}[t!]%
+%	\centering
+%	\subfloat[Communication mechanism between master/workers and SRT threads.]{\label{fig:communication}\includegraphics[width=0.5\columnwidth]{figures/communication2.pdf}} \hspace{0.2cm}
+%	\subfloat[SoC architecture including three types of cores: out of order, in-order and RTopt.]{\label{fig:hw}\includegraphics[width=0.4\linewidth]{figures/hw_fig.pdf}}
+%	\caption{}
+%\end{figure}
+
 \begin{figure}[t!]%
 	\centering
-	\subfloat[Communication mechanism between master/workers and SRT threads.]{\label{fig:communication}\includegraphics[width=0.5\columnwidth]{figures/communication2.pdf}} \hspace{0.2cm}
-	\subfloat[SoC architecture including three types of cores: out of order, in-order and RTopt.]{\label{fig:hw}\includegraphics[width=0.4\linewidth]{figures/hw_fig.pdf}}
-	\caption{}
+	
+	\includegraphics[width=0.9\textwidth]{figures/communication2.pdf}
+	\caption{Communication mechanism between master/workers and SRT threads.}
+	\label{fig:communication}
 \end{figure}
-
-
+	
 As an alternative, in our envisioned architecture we propose to have a general purpose core that has been optimized to run the runtime system activity more efficiently. 
 The runtime optimized (RTopt) core can be combined with both homogeneous or heterogeneous systems and accelerate the runtime activity.
 Figure~\ref{fig:hw} shows the envisioned architecture when RTopt is combined with an asymmetric heterogeneous system.
@@ -31,7 +38,12 @@ This architecture has three core types that consist of simple in-order cores, fa
 RTopt can optimize its architecture, having a different cache hierarchy, pipeline configuration and specialized hardware structures to hold and process the SRT. 
 As a result, the RTopt executes the SRT much faster than the other cores. 
 The RTopt can also execute tasks, but will achieve limited performance compared to the other cores as its hardware structures have been optimized for a specific software (the SRT).
-
+\begin{figure}[t!]
+	\centering
+	\includegraphics[width=0.6\textwidth]{figures/hw_fig.pdf}
+	\caption{SoC architecture including three types of cores: out of order, in-order and RTopt.}
+	\label{fig:hw}
+\end{figure}
 To evaluate our approach we study the requirements of the RTopt in order to provide enough performance for {\proposal}.
 Based on the analysis by Etsion et al.~\cite{TaskSS}, there is a certain \textit{task decode rate} that leads to optimal utilization of the multi-core system.
 This rule can be applied in the case of {\proposal} for the \textit{task creation rate}, i.e., the frequency of task generation of the runtime system.
