--- a/background.tex
+++ b/background.tex
@@ -1,4 +1,5 @@
 \chapter{Background}
+\label{chapter.background}
 To familiarize the reader, this chapter describes the background of this thesis. 
 This study includes software enhancements targeting asymetric multi-core systems.
 Thus, we first give some background information about the asymetric multi-core architecture used in this work, which is the ARM big.LITTLE architecture~\cite{Greenhalgh2011}.
@@ -10,11 +11,13 @@ Finally we we provide a high-level description of the applications used in this 
 \input{bigLittle_background}
 
 \section{The TaskSim Simulator}
+\label{sec.background.simulation}
 \input{simulation_background}
 
 \section{Task-Based Parallel Programming Models}
 \label{sec.background.taskbased}
 \input{TB_models_background}
 
-
+\section{Applications}
+\label{sec.background.applications}
 \input{applications_background}
